--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "framer-motion": "^10.16.4",
     "react-icons": "^4.11.0",
     "@heroicons/react": "^2.0.18",
-    "date-fns": "^2.30.0"
+    "date-fns": "^2.30.0",
+    "react-router-dom": "^6.18.0",
+    "react-dropzone": "^14.2.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
